Prevent row from overflowing horizontal bounds

--- a/src/assets/styles/layout/page/_page.scss
+++ b/src/assets/styles/layout/page/_page.scss
@@ -27,6 +27,7 @@ body {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        overflow: hidden;
         position: relative;
         width: 100%;
     }
